--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "canlionheart.github.io",
-  "homepage": "http://canlionheart.github.io",
+  "homepage": "http://canlionheart.github.io/canlionheart-canlionheart.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
